[gd_scene load_steps=5 format=3 uid="uid://52h848nfricr"]

[ext_resource type="Script" uid="uid://du0mcwwmg6f2i" path="res://scripts/fire_attack.gd" id="1_agrtj"]
[ext_resource type="Texture2D" uid="uid://c1o6210heiosi" path="res://assets/placeholder_assets/fire.png" id="2_agrtj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7gpr6"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rv45m"]
radius = 64.0

[node name="fire_attack" type="Node2D"]
script = ExtResource("1_agrtj")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1.64, 1.64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -150)
shape = SubResource("CircleShape2D_7gpr6")

[node name="Icon" type="Sprite2D" parent="Area2D/CollisionShape2D"]
modulate = Color(0.868046, 0.39493915, 1.92523e-07, 1)
texture_filter = 1
scale = Vector2(8, 8)
texture = ExtResource("2_agrtj")

[node name="Area2D2" type="Area2D" parent="."]
scale = Vector2(1.64, 1.64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0, 150)
shape = SubResource("CircleShape2D_7gpr6")

[node name="Icon" type="Sprite2D" parent="Area2D2/CollisionShape2D"]
modulate = Color(0.868046, 0.39493915, 1.92523e-07, 1)
texture_filter = 1
rotation = 3.1415927
scale = Vector2(8, 8)
texture = ExtResource("2_agrtj")

[node name="Area2D3" type="Area2D" parent="."]
scale = Vector2(1.64, 1.64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(150, 0)
shape = SubResource("CircleShape2D_7gpr6")

[node name="Icon" type="Sprite2D" parent="Area2D3/CollisionShape2D"]
modulate = Color(0.868046, 0.39493915, 1.92523e-07, 1)
texture_filter = 1
rotation = 1.5707964
scale = Vector2(8, 8)
texture = ExtResource("2_agrtj")

[node name="Area2D4" type="Area2D" parent="."]
scale = Vector2(1.64, 1.64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(-150, 0)
shape = SubResource("CircleShape2D_rv45m")

[node name="Icon" type="Sprite2D" parent="Area2D4/CollisionShape2D"]
modulate = Color(0.868046, 0.39493915, 1.92523e-07, 1)
texture_filter = 1
rotation = 4.712389
scale = Vector2(8, 8)
texture = ExtResource("2_agrtj")

[node name="die_time" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_entered"]
[connection signal="area_entered" from="Area2D3" to="." method="_on_area_entered"]
[connection signal="area_entered" from="Area2D4" to="." method="_on_area_entered"]
[connection signal="timeout" from="die_time" to="." method="_on_die_time_timeout"]
